Fixed spacing

--- a/landmark/styles/styles.css
+++ b/landmark/styles/styles.css
@@ -116,10 +116,8 @@ footer {
 }
 .station-card {
     margin: 50px auto;
-    padding: 15px 30px;
-    margin:200px 0;
     grid-column: 4/8;
-    grid-row: 5/7;
+    grid-row: 5/6;
     font-size: .8em;
 }
 .flag-card {
@@ -127,10 +125,11 @@ footer {
     padding: 15px 30px;
     margin:200px 0;
     grid-column: 3/9;
-    grid-row: 7/9;
+    grid-row: 6/8;
     font-size: .8em;
 }
 .card-img {
+height:auto;
 width: 100%;
 border: 10px solid black;
 }
@@ -138,25 +137,25 @@ border: 10px solid black;
     margin: 50px auto;
     padding: 15px 30px;
     grid-column: 2/3;
-    grid-row: 5/7;
+    grid-row: 7/8;
 }
 .capitol-card{
     margin: 50px auto;
     padding: 15px 30px;
-    grid-column: 5/6;
-    grid-row: 5/7;
+    grid-column: 4/5;
+    grid-row: 7/8;
 }
 .city-card{
     margin: 50px auto;
     padding: 15px 30px;
-    grid-column: 8/9;
-    grid-row: 5/7;
+    grid-column: 6/7;
+    grid-row: 7/8;
 }
 .dark-card{
     margin: 20px auto;
     padding: 15px 30px;
-    grid-column:3/8;
-    grid-row: 2/3;
+    grid-column:3/6;
+    grid-row: 5/6;
 }
 .bw-card{
     width: 400px;
@@ -196,17 +195,21 @@ border: 10px solid black;
     font-size: 2em;
 }
 .text-box{
-    grid-column:3/8;
+    grid-column:3/6;
     grid-row: 8/9;
 }
+.description{
+    grid-column:3/6;
+}
 .intro-box{
-    grid-column:4/6;
+    height:200px;
+    grid-column:3/6;
     grid-row:2/3;
 }
 .top-box{
     height:400px;
     grid-column:2/10;
-    grid-row:1/3;
+    grid-row:2/3;
 }
 .top{
     grid-column:3/6;
